[tool.poetry]
name = "codeblocks"
version = "0.2.0"
description = "Extract and process code blocks from Markdown files."
authors = ["Alexey Shamrin <shamrin@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/shamrin/codeblocks"

[tool.poetry.scripts]
codeblocks = 'codeblocks:main'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
