[tool.poetry]
name = "codeblocks"
version = "0.2.3"
description = "Extract and process code blocks from Markdown files."
authors = ["Alexey Shamrin <shamrin@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/shamrin/codeblocks"

[tool.poetry.scripts]
codeblocks = 'codeblocks:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
black = "^24.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
